<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/advance_conf_dialog_title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/typeSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginTop="10dp" />

    <RadioGroup
        android:id="@+id/orderRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeSp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ascRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance_conf_dialog_asc"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/descRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/advance_conf_dialog_desc"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/filterCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderRg"
        android:layout_marginTop="10dp"
        android:text="@string/advance_conf_dialog_sys_filter"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filterCb"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/btn_text_confirm"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/btn_text_reset"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>